--- a/components/layout/top-bar/top-bar.css
+++ b/components/layout/top-bar/top-bar.css
@@ -45,7 +45,7 @@
 
 .promo-text {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 24px !important;
     color: #ffffff;
 }
 
@@ -54,7 +54,7 @@
     border: none;
     color: #ffffff;
     font-weight: 700;
-    font-size: 1.25rem;
+    font-size: 24px;
     cursor: pointer;
     text-decoration: underline;
     text-underline-offset: 3px;
